--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,7 +10,4 @@ appDescription=A Fiori application.
 #XTIT: Main view title
 title=Application Using MockServer
 
-headerText=Upcoming Meet-Ups
-loadFirstItems=Get First Three Meet-Ups
-
-noDataText=No meet-ups found
+meetupTitle=Titulo
